--- a/links.html
+++ b/links.html
@@ -203,10 +203,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="clearfix grpelem" id="u529-4"><!-- content -->
       <p>The immersive visualization lab is a space located at UC San Diego that is dedicated to the development of augmented reality and virtual reality projects. Individuals who work at IVL receive funding through various companies to develop immersive applications. IVL is partnered with Qualcomm Institute recieving expanded support.</p>
      </div>
-     <a class="nonblock nontext grow clip_frame grpelem" id="u1578" href="https://qi.ucsd.edu/research-services/visualization.php"><!-- image --><img class="block" id="u1578_img" src="images/color-logo-01_2x.png?crc=4146615316" alt="" data-heightwidthratio="0.38114754098360654" data-image-width="244" data-image-height="93"/></a>
+     <a class="nonblock nontext grow clip_frame grpelem" id="u1578" href="https://qi.ucsd.edu/research-services/visualization.php"><!-- image --><img class="block" id="u1578_img" src="https://raw.githubusercontent.com/sophiaboss11/sophiaboss11.github.io/master/images/icons/Color-Logo-01.png" alt="" data-heightwidthratio="0.38114754098360654" data-image-width="244" data-image-height="93"/></a>
     </div>
     <div class="clearfix colelem" id="pu1588"><!-- group -->
-     <a class="nonblock nontext grow clip_frame grpelem" id="u1588" href="https://www.youtube.com/watch?v=rHJcJqsj1Wc"><!-- image --><img class="block" id="u1588_img" src="images/txrlogo.png?crc=535545514" alt="" data-heightwidthratio="1" data-image-width="146" data-image-height="146"/></a>
+     <a class="nonblock nontext grow clip_frame grpelem" id="u1588" href="https://www.youtube.com/watch?v=rHJcJqsj1Wc"><!-- image --><img class="block" id="u1588_img" src="https://raw.githubusercontent.com/sophiaboss11/sophiaboss11.github.io/master/images/icons/txrlogo.png" alt="" data-heightwidthratio="1" data-image-width="146" data-image-height="146"/></a>
      <div class="clearfix grpelem" id="u535-6"><!-- content -->
       <p>Triton XR is an award-winning professional and social organization at UC San Diego, one of the largest and most successful XR student organizations in the nation, and the best resource for undergraduate students to engage with XR technology in San Diego. The organization holds numerous events including Hackathons, large-scale XR demos, workshops, project showcases, socials, and collaborations with other student organizations and departments on campus.</p>
       <p>&nbsp;</p>
