2d and 2d button images

--- a/work.html
+++ b/work.html
@@ -142,14 +142,14 @@ opacity: 0; -moz-transition-property: all; -o-transition-property: all; -webkit-
      <a class="nonblock nontext size_fluid_width grpelem" id="u2230" href="2d.html" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx"><!-- custom html -->
 <!-- This Adobe Muse widget was created by the team at MuseFree.com -->
 	     <div class="u2230">
-<img src="assets/pawel-czerwinski-bmaotpbzpmk-unsplash.jpg"/><span class="name">2D Art<span class="title">drawings, paintings, and digital art</span></span>
+<img src="https://raw.githubusercontent.com/sophiaboss11/sophiaboss11.github.io/master/images/FOR_WEBSITE/pawel-czerwinski-BmAOtpBZpMk-unsplash.jpg"/><span class="name">2D Art<span class="title">drawings, paintings, and digital art</span></span>
 </div>
 
 </a>
      <a class="nonblock nontext size_fluid_width grpelem" id="u2243" href="3d.html" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx"><!-- custom html -->
 <!-- This Adobe Muse widget was created by the team at MuseFree.com -->
 	     <div class="u2243">
-<img src="assets/rock_ore_002_norm.jpg"/><span class="name">3D Art<span class="title">models, rigs, and animations</span></span>
+<img src="https://raw.githubusercontent.com/sophiaboss11/sophiaboss11.github.io/master/images/FOR_WEBSITE/Rock_Ore_002_NORM.jpg"/><span class="name">3D Art<span class="title">models, rigs, and animations</span></span>
 </div>
 
 </a>
