--- a/work.html
+++ b/work.html
@@ -108,7 +108,7 @@ opacity: 0; -moz-transition-property: all; -o-transition-property: all; -webkit-
     <div class="browser_width colelem" id="u1937-bw">
      <div id="u1937"><!-- group -->
       <div class="clearfix" id="u1937_align_to_page">
-       <a class="nonblock nontext clip_frame grpelem" id="u1928" href="index.html"><!-- image --><img class="block" id="u1928_img" src="https://media.githubusercontent.com/media/sophiaboss11/sophiaboss11.github.io/master/images/Gifs/sb_icon.gif" data-hidpi-src="https://media.githubusercontent.com/media/sophiaboss11/sophiaboss11.github.io/master/images/Gifs/sb_icon.gif" alt="" data-heightwidthratio="0.21390374331550802" data-image-width="187" data-image-height="40"/></a>
+       <a class="nonblock nontext clip_frame grpelem" id="u1928" href="index.html"><!-- image --><img class="block" id="u1928_img" src="images/sb_icon.gif?crc=4191900242" data-hidpi-src="images/sb_icon_2x.gif?crc=4191900242" alt="" data-heightwidthratio="0.21390374331550802" data-image-width="187" data-image-height="40"/></a>
        <div class="clearfix grpelem" id="pu2265"><!-- group -->
         <div class="size_fixed grpelem" id="u2265" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- custom html -->
          
@@ -116,8 +116,8 @@ opacity: 0; -moz-transition-property: all; -o-transition-property: all; -webkit-
 <canvas id="canvas"></canvas>
  
         </div>
-        <a class="nonblock nontext grpelem" id="u2283" href="index.html"><!-- simple frame --></a>
-        <a class="nonblock nontext MuseLinkActive grpelem" id="u2286" href="work.html"><!-- simple frame --></a>
+        <a class="nonblock nontext MuseLinkActive grpelem" id="u2283" href="work.html"><!-- simple frame --></a>
+        <a class="nonblock nontext grpelem" id="u2286" href="index.html"><!-- simple frame --></a>
         <a class="nonblock nontext grpelem" id="u2289" href="about.html"><!-- simple frame --></a>
         <a class="nonblock nontext grpelem" id="u2292" href="critiquepage.html"><!-- simple frame --></a>
        </div>
@@ -142,28 +142,28 @@ opacity: 0; -moz-transition-property: all; -o-transition-property: all; -webkit-
      <a class="nonblock nontext size_fluid_width grpelem" id="u2230" href="2d.html" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx"><!-- custom html -->
 <!-- This Adobe Muse widget was created by the team at MuseFree.com -->
 	     <div class="u2230">
-<img src="https://raw.githubusercontent.com/sophiaboss11/sophiaboss11.github.io/master/images/FOR_WEBSITE/pawel-czerwinski-BmAOtpBZpMk-unsplash.jpg"/><span class="name">2D Art<span class="title">drawings, paintings, and digital art</span></span>
+<img src="assets/pawel-czerwinski-bmaotpbzpmk-unsplash.jpg"/><span class="name">2D Art<span class="title">drawings, paintings, and digital art</span></span>
 </div>
 
 </a>
      <a class="nonblock nontext size_fluid_width grpelem" id="u2243" href="3d.html" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx"><!-- custom html -->
 <!-- This Adobe Muse widget was created by the team at MuseFree.com -->
 	     <div class="u2243">
-<img src="https://raw.githubusercontent.com/sophiaboss11/sophiaboss11.github.io/master/images/FOR_WEBSITE/Rock_Ore_002_NORM.jpg"/><span class="name">3D Art<span class="title">models, rigs, and animations</span></span>
+<img src="assets/rock_ore_002_norm.jpg"/><span class="name">3D Art<span class="title">models, rigs, and animations</span></span>
 </div>
 
 </a>
      <a class="nonblock nontext size_fluid_width grpelem" id="u2250" href="design.html" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx"><!-- custom html -->
 <!-- This Adobe Muse widget was created by the team at MuseFree.com -->
 	     <div class="u2250">
-<img src="https://media.githubusercontent.com/media/sophiaboss11/sophiaboss11.github.io/master/images/Gifs/MOSHED-2020-6-13-20-58-53.gif"/><span class="name">Design<span class="title">graphics, posters, and layouts</span></span>
+<img src="assets/moshed-2020-6-13-20-58-53.gif"/><span class="name">Design<span class="title">graphics, posters, and layouts</span></span>
 </div>
 
 </a>
      <a class="nonblock nontext size_fluid_width grpelem" id="u2255" href="projects.html" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx"><!-- custom html -->
 <!-- This Adobe Muse widget was created by the team at MuseFree.com -->
 	     <div class="u2255">
-<img src="https://media.githubusercontent.com/media/sophiaboss11/sophiaboss11.github.io/master/images/Gifs/load.gif"/><span class="name">Projects<span class="title"> various projects from university</span></span>
+<img src="assets/load.gif"/><span class="name">Projects<span class="title"> various projects from university</span></span>
 </div>
 
 </a>
@@ -176,7 +176,7 @@ opacity: 0; -moz-transition-property: all; -o-transition-property: all; -webkit-
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
-   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
+   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn2.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
    window.jQuery || document.write('\x3Cscript src="scripts/jquery-1.8.3.min.js?crc=209076791" type="text/javascript">\x3C/script>');
@@ -207,7 +207,7 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 
 </script>
   <!-- RequireJS script -->
-  <script src="scripts/require.js?crc=4177726516" type="text/javascript" async data-main="scripts/museconfig.js?crc=3936894949" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
+  <script src="scripts/require.js?crc=4177726516" type="text/javascript" async data-main="scripts/museconfig.js?crc=128606099" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
   
   <!--HTML Widget code-->
   
