--- a/critiquepage.html
+++ b/critiquepage.html
@@ -41,8 +41,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 <canvas id="canvas"></canvas>
  
        </div>
-       <a class="nonblock nontext grpelem" id="u2283" href="index.html"><!-- simple frame --></a>
-       <a class="nonblock nontext grpelem" id="u2286" href="work.html"><!-- simple frame --></a>
+       <a class="nonblock nontext grpelem" id="u2283" href="work.html"><!-- simple frame --></a>
+       <a class="nonblock nontext grpelem" id="u2286" href="index.html"><!-- simple frame --></a>
        <a class="nonblock nontext grpelem" id="u2289" href="about.html"><!-- simple frame --></a>
        <a class="nonblock nontext MuseLinkActive grpelem" id="u2292" href="critiquepage.html"><!-- simple frame --></a>
       </div>
@@ -74,7 +74,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
-   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
+   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn2.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
 </script>
   <script type="text/javascript">
    window.jQuery || document.write('\x3Cscript src="scripts/jquery-1.8.3.min.js?crc=209076791" type="text/javascript">\x3C/script>');
@@ -105,7 +105,7 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 
 </script>
   <!-- RequireJS script -->
-  <script src="scripts/require.js?crc=4177726516" type="text/javascript" async data-main="scripts/museconfig.js?crc=3936894949" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
+  <script src="scripts/require.js?crc=4177726516" type="text/javascript" async data-main="scripts/museconfig.js?crc=128606099" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
   
   <!--HTML Widget code-->
   
