--- a/resume.html
+++ b/resume.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>resume</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3839925840"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4110669070"/>
-  <link rel="stylesheet" type="text/css" href="css/resume.css?crc=536037413" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4051840101"/>
+  <link rel="stylesheet" type="text/css" href="css/resume.css?crc=3930496519" id="pagesheet"/>
     <!--HTML Widget code-->
   
 
@@ -30,6 +30,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div id="u1937"><!-- group -->
      <div class="clearfix" id="u1937_align_to_page">
       <a class="nonblock nontext clip_frame grpelem" id="u1928" href="index.html"><!-- image --><img class="block" id="u1928_img" src="images/sb_icon.gif?crc=4191900242" data-hidpi-src="images/sb_icon_2x.gif?crc=4191900242" alt="" data-heightwidthratio="0.21390374331550802" data-image-width="187" data-image-height="40"/></a>
+      <div class="clearfix grpelem" id="u5350-4"><!-- content -->
+       <p>// Website currently under construction //</p>
+      </div>
       <div class="clearfix grpelem" id="pu2265"><!-- group -->
        <div class="size_fixed grpelem" id="u2265" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- custom html -->
         
