--- a/links.html
+++ b/links.html
@@ -11,14 +11,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "jquery.musepolyfill.bgsize.js", "links.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "jquery.musepolyfill.bgsize.js", "require.js", "links.css"], "outOfDate":[]};
 </script>
   
   <title>Links</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3839925840"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4110669070"/>
-  <link rel="stylesheet" type="text/css" href="css/links.css?crc=4289802087" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4051840101"/>
+  <link rel="stylesheet" type="text/css" href="css/links.css?crc=435855887" id="pagesheet"/>
     <!--HTML Widget code-->
   <headHTML>
   <style>.fade
@@ -358,6 +358,9 @@ canvas {
      <div id="u1937"><!-- group -->
       <div class="clearfix" id="u1937_align_to_page">
        <a class="nonblock nontext clip_frame grpelem" id="u1928" href="index.html"><!-- image --><img class="block" id="u1928_img" src="images/sb_icon.gif?crc=4191900242" data-hidpi-src="images/sb_icon_2x.gif?crc=4191900242" alt="" data-heightwidthratio="0.21390374331550802" data-image-width="187" data-image-height="40"/></a>
+       <div class="clearfix grpelem" id="u5350-4"><!-- content -->
+        <p>// Website currently under construction //</p>
+       </div>
        <div class="clearfix grpelem" id="pu2265"><!-- group -->
         <div class="size_fixed grpelem" id="u2265" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- custom html -->
          
@@ -409,7 +412,7 @@ canvas {
      </div>
      <div class="museBGSize size_fluid_width grpelem" id="u5249" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx"><!-- custom html -->
       
-<a href="https://qi.ucsd.edu/research-services/visualization.php" style="cursor: pointer">
+<a href="https://www.youtube.com/watch?v=rHJcJqsj1Wc" style="cursor: pointer">
 <button class="u5249">
   Hover me
   <span class="u5249outline-button__lines">
